2009-10-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c: Add a workaround for Oracle 9.2.0.1 when clearing
	    a client identifier.
	* ext/oci8/oci8lib.c: Fix a segv when canceling a non-blocking
	    execution.
	* test_appinfo.rb: Fix temporarily to prevent a segmentation fault
	    under Oracle 9.2.0.1.
	* test/test_oci8.rb: Fix temporarily to prevent a segmentation fault
	    under Oracle 9.2.0.1. Fix for BigDecimal bundled in ruby 1.8.5.
	* test/test_oranumber.rb: Fix for Oracle 9.2. Comparing float values
	    by <=> is too sensitive to use it in tests.

2009-10-06  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocinumber.c: Add a global function OraNumber(obj) as a
	    shortcut of OraNumber.new(obj) as Rational and BigDecimal do.
	    Changes the return type of the four rules of arithmetic;
	    addition, subtraction, multiplication and division. It was
	    OraNumber, but now it depends on the operand.
	* lib/oci8/bindtype.rb: Add OCI8::BindType::BigDecimal and
	    OCI8::BindType::Rational. Change the default data type for
	    number column which fit neither Integer nor Float from
	    OraNumber to BigDecimal.
	* lib/oci8/oci8.rb: Fix for OCI8::BindType::Mapping to accept
	    a class name instead of the class object to support
	    OCI8::BindType::BigDecimal and OCI8::BindType::Rational without
	    requiring 'bigdecimal' and 'rational'.
	* spec/oranumber_spec.rb: Add a spec file for OraNumber arithmetic.
	* test/test_oci8.rb: Add tests for OCI8::BindType::BigDecimal and
	    OCI8::BindType::Rational.

2009-10-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c: Add constants missing in Oracle client prior to 10g.
	* ext/oci8/oraconf.rb:
	    1. Fix for ruby 1.8.5 with Oracle 8.x which needs some object
	       files to link with.
	       (reported by Jayson Cena)
	    2. Revise the error message under the sudo environemnt.
	    3. Print not only error message but also the error backtrace when
	       oraconf.rb fails.